--- a/src/html/header.html
+++ b/src/html/header.html
@@ -2,7 +2,6 @@
   <div class="header__container">
     <a href="#" class="header__logo">
         <img src="./images/Logo.png" alt="logo">
-        <p>hello world</p>
     </a>
     <nav class="header__menu menu">
       <ul class="menu__list">
@@ -10,6 +9,7 @@
         <li class="menu__item"><a href="#" class="menu__link">Marketplace</a></li>
         <li class="menu__item"><a href="./token.html" class="menu__link">Token</a></li>
         <li class="menu__item"><a href="./fund.html" class="menu__link">Fund</a></li>
+        <li class="menu__item"><a href="./fund.html" class="menu__link">test</a></li>
         <div class="header__dropdown">
           <input type="checkbox" id="dropdown-toggle" class="dropdown-toggle">
           <label for="dropdown-toggle" class="dropdown-label">
