test brunch plishkan

--- a/src/html/header.html
+++ b/src/html/header.html
@@ -3,13 +3,13 @@
     <a href="#" class="header__logo">
         <img src="./images/Logo.png" alt="logo">
     </a>
+    <h1>TEST SUCCESS</h1>
     <nav class="header__menu menu">
       <ul class="menu__list">
         <li class="menu__item"><a href="./index.html" class="menu__link">Home</a></li>
         <li class="menu__item"><a href="#" class="menu__link">Marketplace</a></li>
         <li class="menu__item"><a href="./token.html" class="menu__link">Token</a></li>
         <li class="menu__item"><a href="./fund.html" class="menu__link">Fund</a></li>
-        <li class="menu__item"><a href="./fund.html" class="menu__link">test</a></li>
         <div class="header__dropdown">
           <input type="checkbox" id="dropdown-toggle" class="dropdown-toggle">
           <label for="dropdown-toggle" class="dropdown-label">
