header and hero block is finished

--- a/src/index.html
+++ b/src/index.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
 <html lang="ru">
   @@include('html/head.html', {
-    'title': 'OceanNFT'
+    'title': 'Inreriors'
   })
   <body>
     <div class="wrapper">
       @@include('html/header.html', {})
       <main class="page">
         <div data-observ></div>
-        <!-- @@include('html/main/hero.html', {}) -->
+        @@include('html/main/hero.html', {})
+        @@include('html/main/company.html', {})
 
       </main>
       @@include('html/footer.html', {})
