--- a/src/html/header.html
+++ b/src/html/header.html
@@ -1,58 +1,173 @@
 <header class="header">
   <div class="header__container">
-    <a href="#" class="header__logo">
-        <img src="./images/Logo.png" alt="logo">
-    </a>
-    <h1>TEST SUCCESS</h1>
-    <nav class="header__menu menu">
-      <ul class="menu__list">
-        <li class="menu__item"><a href="./index.html" class="menu__link">Home</a></li>
-        <li class="menu__item"><a href="#" class="menu__link">Marketplace</a></li>
-        <li class="menu__item"><a href="./token.html" class="menu__link">Token</a></li>
-        <li class="menu__item"><a href="./fund.html" class="menu__link">Fund</a></li>
-        <div class="header__dropdown">
-          <input type="checkbox" id="dropdown-toggle" class="dropdown-toggle">
-          <label for="dropdown-toggle" class="dropdown-label">
-            <span class="label-text">EN</span>
-            <svg xmlns="http://www.w3.org/2000/svg" width="14" height="8" viewBox="0 0 14 8" fill="none">
-              <path d="M1 0.5L6.73913 6.5L13 0.5" stroke="#959595"/>
-            </svg>
-          </label>
-          <ul class="dropdown-menu">
-            <a href="#">
-              <li>
-                <span>EN</span>
-              </li>
-            </a>
-            <a href="#">
-              <li>
-                <span>UA</span>
-              </li>
-            </a>
-            <a href="#">
-              <li>
-                <span>GR</span>
-              </li>
-            </a>
-          </ul>
+    <div class="header__left">
+      <a href="./index.html" class="header__logo">
+        <img src="./images/logo.png" alt="logo" />
+      </a>
+      <div class="header__icon-menu-wrapper">
+        <div class="icon-menu">
+          <span></span>
         </div>
-      </ul>
-      
+        <p>Menu</p>
+      </div>
+      <nav class="header__menu menu">
+        <div class="menu__wrapper">
+          <div class="menu__logo">
+            <a href="#" class="header__logo">
+              <img src="./images/logo.png" alt="logo" />
+            </a>
+          </div>
+          <div class="menu__button-right">
+            <div class="header__right">
+              <div class="header__dropdown">
+                <input
+                  type="checkbox"
+                  id="dropdown-toggle"
+                  class="dropdown-toggle"
+                />
+                <label for="dropdown-toggle" class="dropdown-label">
+                  <span class="label-text">En</span>
+                </label>
+                <ul class="dropdown-menu">
+                  <a href="#">
+                    <li>
+                      <span>En</span>
+                    </li>
+                  </a>
+                  <a href="#">
+                    <li>
+                      <span>Ua</span>
+                    </li>
+                  </a>
+                  <a href="#">
+                    <li>
+                      <span>Gr</span>
+                    </li>
+                  </a>
+                </ul>
+              </div>
+              <div class="header__button-wrapper">
+                <a href="#">
+                  <div class="header__button button">Send Request</div>
+                </a>
+              </div>
+            </div>
+          </div>
+        </div>
+        <ul class="menu__list">
+          <li class="menu__item menu__item-burger">
+            <a href="./index.html" class="menu__link">Home</a>
+          </li>
+          <li class="menu__item">
+            <a href="#" class="menu__link">Projects</a>
+          </li>
+          <li class="menu__item">
+            <a href="#" class="menu__link">About us</a>
+          </li>
+          <li class="menu__item"><a href="#" class="menu__link">Blog</a></li>
+          <li class="menu__item">
+            <a href="#" class="menu__link">Contacts</a>
+          </li>
+        </ul>
+        <div class="menu__button-wrapper">
+          <a href="#">
+            <div class="button">Send Request</div>
+          </a>
+        </div>
+        <div class="menu__bottom">
+          <div class="menu__content-bottom">
+            <div class="menu__content-inner">
+              <div class="hero__content-link">
+                <a href="#">Fb</a>
+                <a href="#">In</a>
+                <a href="#">Be</a>
+              </div>
+              <div class="hero__dropdown">
+                <input
+                  type="checkbox"
+                  id="dropdown-toggle"
+                  class="hero__dropdown-toggle"
+                />
+                <label for="dropdown-toggle" class="hero__dropdown-label">
+                  <div class="header__content-leftImg">
+                    <img
+                      src="./images/main/hero/maps-and-flags.png"
+                      alt="flag in map"
+                    />
+                  </div>
+                  <span class="hero__label-text">Berlin</span>
+                  <div class="hero__content-rightSvg">
+                    <svg
+                      xmlns="http://www.w3.org/2000/svg"
+                      width="9"
+                      height="6"
+                      viewBox="0 0 9 6"
+                      fill="none"
+                    >
+                      <path
+                        d="M8 1L4.5 4.5L1 1"
+                        stroke="white"
+                        stroke-width="1.4"
+                      />
+                    </svg>
+                  </div>
+                </label>
+                <ul class="hero__dropdown-menu">
+                  <a href="#">
+                    <li>
+                      <span>Berlin</span>
+                    </li>
+                  </a>
+                  <a href="#">
+                    <li>
+                      <span>Ukraine</span>
+                    </li>
+                  </a>
+                  <a href="#">
+                    <li>
+                      <span>London</span>
+                    </li>
+                  </a>
+                </ul>
+              </div>
+            </div>
+            <div class="menu__content-info">
+              <a href="#">+380935705222</a>
+              <a href="#">info@hi-light.pl</a>
+            </div>
+          </div>
+        </div>
+      </nav>
+    </div>
+    <div class="header__right">
+      <div class="header__dropdown">
+        <input type="checkbox" id="dropdown-toggle" class="dropdown-toggle" />
+        <label for="dropdown-toggle" class="dropdown-label">
+          <span class="label-text">En</span>
+        </label>
+        <ul class="dropdown-menu">
+          <a href="#">
+            <li>
+              <span>En</span>
+            </li>
+          </a>
+          <a href="#">
+            <li>
+              <span>Ua</span>
+            </li>
+          </a>
+          <a href="#">
+            <li>
+              <span>Gr</span>
+            </li>
+          </a>
+        </ul>
+      </div>
       <div class="header__button-wrapper">
         <a href="#">
-          <div class="header__button-left button-black">
-            Contact Us
-          </div>
-        </a>
-        <a href="#">
-          <div class="header__button-right button">
-            <span>Buy Token</span>
-          </div>
+          <div class="header__button button">Send Request</div>
         </a>
       </div>
-    </nav>
-    <div class="icon-menu">
-      <span></span>
-    </div> 
+    </div>
   </div>
 </header>
