block company is finished and block projects finished 1440px pixelPerfect

--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,7 @@
         <div data-observ></div>
         @@include('html/main/hero.html', {})
         @@include('html/main/company.html', {})
+        @@include('html/main/projects.html', {})
 
       </main>
       @@include('html/footer.html', {})
