complited adaptive block projects under 768 px

--- a/src/html/main/projects.html
+++ b/src/html/main/projects.html
@@ -91,11 +91,11 @@
               <p>80 sq.m</p>
             </div>
           </div>
-          <div class="projects__card-contentBottom card__contentBottom">
-            <div class="card__contentBottom-text">
+          <div class="projects__card-contentCenter card__contentBottom">
+            <div class="card__contentCenter-text">
               <p>Residence by the lighthouse</p>
             </div>
-            <div class="card__contentBottom-button">
+            <div class="card__contentCenter-button">
               <a href="#">Discover more</a>
             </div>
           </div>
@@ -107,7 +107,7 @@
         </div>
       </div>
       <div class="projects__card-wrapper">
-        <div class="projects__card">
+        <div class="projects__card-bottomLeft">
           <div class="projects__card-contentTop card__contentTop">
             <div class="card__contentTop-info">
               <p>Lodz</p>
@@ -133,14 +133,40 @@
             </a>
           </div>
         </div>
-        <div class="projects__card-bottom">
-          <div class="projects__card-inner">
-            <div class="projects__card-text">
-              <p>See more 60 projects</p>
+        <div class="projects__card-bottomSecond">
+          <div class="projects__card-contentTop card__contentTop">
+            <div class="card__contentTop-info">
+              <p>Lodz</p>
             </div>
-            <div class="projects__card-img">
+            <div class="card__contentTop-info">
+              <p>16.10.2018</p>
+            </div>
+            <div class="card__contentTop-info">
+              <p>80 sq.m</p>
+            </div>
+          </div>
+          <div class="projects__card-contentBottom card__contentBottom">
+            <div class="card__contentBottom-text">
+              <p>House on a Hillside</p>
+            </div>
+            <div class="card__contentBottom-button">
+              <a href="#">Discover more</a>
+            </div>
+          </div>
+          <div class="projects__card-img">
+            <a href="#">
+              <img src="./images/main/company/bottomSecond.png" alt="flat" />
+            </a>
+          </div>
+        </div>
+        <div class="projects__card-bottomRight">
+          <div class="projects__card-text">
+            <p>See more 60 projects</p>
+          </div>
+          <div class="projects__card-inner">
+            <div class="projects__card-bottomImg">
               <a href="#">
-                <img src="./images/main/projects/project5.png" alt="flat" />
+                <img src="./images/main/projects/project5.png" class="projects__small-img" alt="flat" />
               </a>
             </div>
           </div>
