finished block projects and finished block works and start block contacts

--- a/src/html/main/projects.html
+++ b/src/html/main/projects.html
@@ -51,6 +51,32 @@
             </a>
           </div>
         </div>
+        <div class="projects__card-top">
+          <div class="projects__card-contentTop card__contentTop">
+            <div class="card__contentTop-info">
+              <p>Lodz</p>
+            </div>
+            <div class="card__contentTop-info">
+              <p>16.10.2018</p>
+            </div>
+            <div class="card__contentTop-info">
+              <p>80 sq.m</p>
+            </div>
+          </div>
+          <div class="projects__card-contentBottom card__contentBottom">
+            <div class="card__contentBottom-text">
+              <p>Eyewear store interior</p>
+            </div>
+            <div class="card__contentBottom-button">
+              <a href="#">Discover more</a>
+            </div>
+          </div>
+          <div class="projects__card-img">
+            <a href="#">
+              <img src="./images/main/company/topSecond.png" alt="flat" />
+            </a>
+          </div>
+        </div>
         <div class="projects__card">
           <div class="projects__card-contentTop card__contentTop">
             <div class="card__contentTop-info">
