--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,8 @@
         @@include('html/main/hero.html', {})
         @@include('html/main/company.html', {})
         @@include('html/main/projects.html', {})
+        @@include('html/main/work.html', {})
+        @@include('html/main/contact.html', {})
 
       </main>
       @@include('html/footer.html', {})
