finished main pages and almost done header and finished section our 1440px

--- a/src/index.html
+++ b/src/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ru">
   @@include('html/head.html', {
-    'title': 'Inreriors'
+    'title': 'main'
   })
   <body>
     <div class="wrapper">
@@ -13,9 +13,7 @@
         @@include('html/main/projects.html', {})
         @@include('html/main/work.html', {})
         @@include('html/main/contact.html', {})
-
       </main>
-      @@include('html/footer.html', {})
     </div>
     @@include('html/script.html', {})
   </body>
