--- a/src/html/header.html
+++ b/src/html/header.html
@@ -64,7 +64,7 @@
           <li class="menu__item">
             <a href="#" class="menu__link">About us</a>
           </li>
-          <li class="menu__item"><a href="#" class="menu__link">Blog</a></li>
+          <li class="menu__item"><a href="../news.html" class="menu__link">Blog</a></li>
           <li class="menu__item">
             <a href="#" class="menu__link">Contacts</a>
           </li>
