finished it news page and start oneews page

--- a/src/html/headerBlack.html
+++ b/src/html/headerBlack.html
@@ -19,7 +19,7 @@
             </div>
             <div class="menu__button-right">
               <div class="header__right">
-                <div class="header__dropdown">
+                <div class="header__dropdown header__dropdown-white">
                   <input
                     type="checkbox"
                     id="dropdown-toggle"
@@ -28,7 +28,7 @@
                   <label for="dropdown-toggle" class="dropdown-label">
                     <span class="label-text">En</span>
                   </label>
-                  <ul class="dropdown-menu black-header__dropdown-menu">
+                  <ul class="dropdown-menu">
                     <a href="#">
                       <li>
                         <span>En</span>
@@ -48,7 +48,7 @@
                 </div>
                 <div class="header__button-wrapper black-header__button-wrapper">
                   <a href="#">
-                    <div class="header__button button-black">Send Request</div>
+                    <div class="header__button button">Send Request</div>
                   </a>
                 </div>
               </div>
@@ -84,7 +84,7 @@
                   <a href="#">In</a>
                   <a href="#">Be</a>
                 </div>
-                <div class="hero__dropdown">
+                <div class="hero__dropdown hero__dropdown-white">
                   <input
                     type="checkbox"
                     id="dropdown-toggle"
