--- a/src/oneNews.html
+++ b/src/oneNews.html
@@ -8,8 +8,8 @@
       @@include('html/headerBlack.html', {})
       <main class="page">
         <div data-observ></div>
-        @@include('html/news/our.html', {})
-        @@include('html/news/lorem.html', {})
+        @@include('html/oneNews/antrax.html', {})
+        
       </main>
     </div>
     @@include('html/script.html', {})
