to finished page one news and start projects page

--- a/src/html/headerBlack.html
+++ b/src/html/headerBlack.html
@@ -133,7 +133,7 @@
                   </ul>
                 </div>
               </div>
-              <div class="menu__content-info black-header__menu-content">
+              <div class="menu__content-info">
                 <a href="#">+380935705222</a>
                 <a href="#">info@hi-light.pl</a>
               </div>
