--- a/src/projects.html
+++ b/src/projects.html
@@ -8,9 +8,7 @@
       @@include('html/headerBlack.html', {})
       <main class="page">
         <div data-observ></div>
-        @@include('html/oneNews/antrax.html', {})
-        @@include('html/oneNews/ourLatest.html', {})
-        
+        @@include('html/projects/ourProjects.html', {})      
       </main>
     </div>
     @@include('html/script.html', {})
