--- a/src/html/header.html
+++ b/src/html/header.html
@@ -59,7 +59,7 @@
             <a href="./index.html" class="menu__link">Home</a>
           </li>
           <li class="menu__item">
-            <a href="#" class="menu__link">Projects</a>
+            <a href="./projects.html" class="menu__link">Projects</a>
           </li>
           <li class="menu__item">
             <a href="#" class="menu__link">About us</a>
