--- a/src/html/header.html
+++ b/src/html/header.html
@@ -13,7 +13,7 @@
       <nav class="header__menu menu">
         <div class="menu__wrapper">
           <div class="menu__logo">
-            <a href="#" class="header__logo">
+            <a href="./index.html" class="header__logo">
               <img src="./images/logo.png" alt="logo" />
             </a>
           </div>
@@ -64,7 +64,9 @@
           <li class="menu__item">
             <a href="#" class="menu__link">About us</a>
           </li>
-          <li class="menu__item"><a href="../news.html" class="menu__link">Blog</a></li>
+          <li class="menu__item">
+            <a href="./news.html" class="menu__link">Blog</a>
+          </li>
           <li class="menu__item">
             <a href="#" class="menu__link">Contacts</a>
           </li>
