is finished one project page

--- a/src/oneProject.html
+++ b/src/oneProject.html
@@ -10,6 +10,8 @@
         <div data-observ></div>
         @@include('html/oneProject/residence.html', {})
         @@include('html/oneProject/oneDonec.html', {})
+        @@include('html/oneProject/photos.html', {})
+        @@include('html/oneProject/perfect.html', {})
 
       </main>
     </div>
