start work with about page

--- a/src/html/headerBlack.html
+++ b/src/html/headerBlack.html
@@ -1,4 +1,4 @@
-<header class="black-header">
+<header class="black-header philocophy__header">
     <div class="header__container">
       <div class="header__left">
         <a href="./index.html" class="header__logo">
