--- a/src/html/header.html
+++ b/src/html/header.html
@@ -62,7 +62,7 @@
             <a href="./projects.html" class="menu__link">Projects</a>
           </li>
           <li class="menu__item">
-            <a href="#" class="menu__link">About us</a>
+            <a href="./about.html" class="menu__link">About us</a>
           </li>
           <li class="menu__item">
             <a href="./news.html" class="menu__link">Blog</a>
