is finished about page and contact page

--- a/src/about.html
+++ b/src/about.html
@@ -10,6 +10,10 @@
         <div data-observ></div>
         @@include('html/about/philocophy.html', {})      
         @@include('html/about/companyTop.html', {})      
+        @@include('html/about/companyCenter.html', {})      
+        @@include('html/about/companyBottom.html', {})      
+        @@include('html/about/companyLorem.html', {})      
+        @@include('html/about/want.html', {})      
       </main>
     </div>
     @@include('html/script.html', {})
