--- a/src/html/header.html
+++ b/src/html/header.html
@@ -68,7 +68,7 @@
             <a href="./news.html" class="menu__link">Blog</a>
           </li>
           <li class="menu__item">
-            <a href="#" class="menu__link">Contacts</a>
+            <a href="./pageContact.html" class="menu__link">Contacts</a>
           </li>
           <div class="menu__button-wrapper">
             <a href="#">
