--- a/src/html/headerBlack.html
+++ b/src/html/headerBlack.html
@@ -59,16 +59,16 @@
               <a href="./index.html" class="menu__link">Home</a>
             </li>
             <li class="menu__item menu__item-black">
-              <a href="#" class="menu__link">Projects</a>
+              <a href="./projects.html" class="menu__link">Projects</a>
             </li>
             <li class="menu__item menu__item-black">
-              <a href="#" class="menu__link">About us</a>
+              <a href="./about.html" class="menu__link">About us</a>
             </li>
             <li class="menu__item menu__item-black">
-              <a href="../news.html" class="menu__link">Blog</a>
+              <a href="./news.html" class="menu__link">Blog</a>
             </li>
             <li class="menu__item menu__item-black">
-              <a href="#" class="menu__link">Contacts</a>
+              <a href="./pageContact.html" class="menu__link">Contacts</a>
             </li>
             <div class="menu__button-wrapper">
               <a href="#">
