fixed footer on contact page and done fixed header and fixed pixelPerfect for everyone pages

--- a/src/about.html
+++ b/src/about.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ru">
   @@include('html/head.html', {
-    'title': 'news'
+    'title': 'about'
   })
   <body class="body-black">
     <div class="wrapper">
