--- a/src/html/main/contact.html
+++ b/src/html/main/contact.html
@@ -6,7 +6,9 @@
     <div class="contact__sidebar">
       <p>Contacts</p>
     </div>
-    @@include('../../components/contacts.html', {})
+    <div class="contacts__wrapper">
+      @@include('../../components/contacts.html', {})
+    </div>
     <footer class="footer footer__black">
       <div class="footer__wrapper">
         <div class="footer__wrapper-left">
