--- a/src/html/header.html
+++ b/src/html/header.html
@@ -1,4 +1,4 @@
-<header class="header">
+<header class="header mainContact__header">
   <div class="header__container">
     <div class="header__left">
       <a href="./index.html" class="header__logo">
