--- a/src/oneProject.html
+++ b/src/oneProject.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ru">
   @@include('html/head.html', {
-    'title': 'main'
+    'title': 'oneProject'
   })
   <body>
     <div class="wrapper">
