--- a/src/projects.html
+++ b/src/projects.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ru">
   @@include('html/head.html', {
-    'title': 'news'
+    'title': 'projects'
   })
   <body class="body-black">
     <div class="wrapper">
