remade on grid and to fixed problem when scroll in open burgerMenu and made up for pop up

--- a/src/html/projects/ourProjects.html
+++ b/src/html/projects/ourProjects.html
@@ -103,12 +103,12 @@
               </div>
             </div>
             <div class="projects__card-img">
-              <a href="./oneProject.html">
+              <a href="#">
                 <img src="./images/main/projects/project1.png" alt="flat" />
               </a>
             </div>
           </div>
-          <div class="projects__card-top">
+          <div class="projects__card ourProjects__card-mobile">
             <div class="projects__card-contentTop card__contentTop">
               <div class="card__contentTop-info">
                 <p>Lodz</p>
@@ -129,7 +129,7 @@
               </div>
             </div>
             <div class="projects__card-img">
-              <a href="./oneProject.html">
+              <a href="#">
                 <img src="./images/main/company/topSecond.png" alt="flat" />
               </a>
             </div>
@@ -155,14 +155,12 @@
               </div>
             </div>
             <div class="projects__card-img">
-              <a href="./oneProject.html">
+              <a href="#">
                 <img src="./images/main/projects/project2.png" alt="flat" />
               </a>
             </div>
           </div>
-        </div>
-        <div class="projects__card-wrapper">
-          <div class="projects__card-center">
+          <div class="projects__card projects__card-one ourProjects__card-desktop">
             <div class="projects__card-contentTop card__contentTop">
               <div class="card__contentTop-info">
                 <p>Lodz</p>
@@ -183,13 +181,11 @@
               </div>
             </div>
             <div class="projects__card-img">
-              <a href="./oneProject.html">
+              <a href="#">
                 <img src="./images/main/projects/project3.png" alt="flat" />
               </a>
             </div>
           </div>
-        </div>
-        <div class="projects__card-wrapper ourProjects__inner-card-desktop">
           <div class="projects__card">
             <div class="projects__card-contentTop card__contentTop">
               <div class="card__contentTop-info">
@@ -211,34 +207,8 @@
               </div>
             </div>
             <div class="projects__card-img">
-              <a href="./oneProject.html">
-                <img src="./images/projects/ourProjects/flat4.png" alt="flat" />
-              </a>
-            </div>
-          </div>
-          <div class="projects__card-top">
-            <div class="projects__card-contentTop card__contentTop">
-              <div class="card__contentTop-info">
-                <p>Lodz</p>
-              </div>
-              <div class="card__contentTop-info">
-                <p>16.10.2018</p>
-              </div>
-              <div class="card__contentTop-info">
-                <p>80 sq.m</p>
-              </div>
-            </div>
-            <div class="projects__card-contentBottom card__contentBottom">
-              <div class="card__contentBottom-text">
-                <p>Eyewear store interior</p>
-              </div>
-              <div class="card__contentBottom-button">
-                <a href="#">Discover more</a>
-              </div>
-            </div>
-            <div class="projects__card-img">
-              <a href="./oneProject.html">
-                <img src="./images/main/company/topSecond.png" alt="flat" />
+              <a href="#">
+                <img src="./images/main/projects/project4.png" alt="flat" />
               </a>
             </div>
           </div>
@@ -256,21 +226,19 @@
             </div>
             <div class="projects__card-contentBottom card__contentBottom">
               <div class="card__contentBottom-text">
-                <p>Eyewear store interior</p>
+                <p>House on a Hillside</p>
               </div>
               <div class="card__contentBottom-button">
                 <a href="#">Discover more</a>
               </div>
             </div>
             <div class="projects__card-img">
-              <a href="./oneProject.html">
-                <img src="./images/projects/ourProjects/flat5.png" alt="flat" />
+              <a href="#">
+                <img src="./images/main/company/bottomSecond.png" alt="flat" />
               </a>
             </div>
           </div>
-        </div>
-        <div class="projects__card-wrapper">
-          <div class="projects__card-center">
+          <div class="projects__card projects__card-one">
             <div class="projects__card-contentTop card__contentTop">
               <div class="card__contentTop-info">
                 <p>Lodz</p>
@@ -282,110 +250,22 @@
                 <p>80 sq.m</p>
               </div>
             </div>
-            <div class="projects__card-contentCenter card__contentBottom">
-              <div class="card__contentCenter-text">
-                <p>Residence by the lighthouse</p>
+            <div class="projects__card-contentBottom card__contentBottom">
+              <div class="card__contentBottom-text">
+                <p>House on a Hillside</p>
               </div>
-              <div class="card__contentCenter-button">
+              <div class="card__contentBottom-button">
                 <a href="#">Discover more</a>
               </div>
             </div>
             <div class="projects__card-img">
-              <a href="./oneProject.html">
+              <a href="#">
                 <img src="./images/projects/ourProjects/flat6.png" alt="flat" />
               </a>
             </div>
           </div>
-          <div class="ourProjects__card-bottom">
-            <div class="projects__card-wrapper">
-              <div class="projects__card">
-                <div class="projects__card-contentTop card__contentTop">
-                  <div class="card__contentTop-info">
-                    <p>Lodz</p>
-                  </div>
-                  <div class="card__contentTop-info">
-                    <p>16.10.2018</p>
-                  </div>
-                  <div class="card__contentTop-info">
-                    <p>80 sq.m</p>
-                  </div>
-                </div>
-                <div class="projects__card-contentBottom card__contentBottom">
-                  <div class="card__contentBottom-text">
-                    <p>Eyewear store interior</p>
-                  </div>
-                  <div class="card__contentBottom-button">
-                    <a href="#">Discover more</a>
-                  </div>
-                </div>
-                <div class="projects__card-img">
-                  <a href="./oneProject.html">
-                    <img
-                      src="./images/projects/ourProjects/flat4.png"
-                      alt="flat"
-                    />
-                  </a>
-                </div>
-              </div>
-              <div class="projects__card-top">
-                <div class="projects__card-contentTop card__contentTop">
-                  <div class="card__contentTop-info">
-                    <p>Lodz</p>
-                  </div>
-                  <div class="card__contentTop-info">
-                    <p>16.10.2018</p>
-                  </div>
-                  <div class="card__contentTop-info">
-                    <p>80 sq.m</p>
-                  </div>
-                </div>
-                <div class="projects__card-contentBottom card__contentBottom">
-                  <div class="card__contentBottom-text">
-                    <p>Eyewear store interior</p>
-                  </div>
-                  <div class="card__contentBottom-button">
-                    <a href="#">Discover more</a>
-                  </div>
-                </div>
-                <div class="projects__card-img">
-                  <a href="./oneProject.html">
-                    <img src="./images/main/company/topSecond.png" alt="flat" />
-                  </a>
-                </div>
-              </div>
-              <div class="projects__card">
-                <div class="projects__card-contentTop card__contentTop">
-                  <div class="card__contentTop-info">
-                    <p>Lodz</p>
-                  </div>
-                  <div class="card__contentTop-info">
-                    <p>16.10.2018</p>
-                  </div>
-                  <div class="card__contentTop-info">
-                    <p>80 sq.m</p>
-                  </div>
-                </div>
-                <div class="projects__card-contentBottom card__contentBottom">
-                  <div class="card__contentBottom-text">
-                    <p>House on a Hillside</p>
-                  </div>
-                  <div class="card__contentBottom-button">
-                    <a href="#">Discover more</a>
-                  </div>
-                </div>
-                <div class="projects__card-img">
-                  <a href="./oneProject.html">
-                    <img
-                      src="./images/projects/ourProjects/flatBottom6.png"
-                      alt="flat"
-                    />
-                  </a>
-                </div>
-              </div>
-            </div>
-          </div>
         </div>
-      </div>
+        </div>
       <div class="ourProjects__inner-item mix apartments">
         <div class="projects__card-wrapper">
           <div class="projects__card">
@@ -409,34 +289,8 @@
               </div>
             </div>
             <div class="projects__card-img">
-              <a href="./oneProject.html">
+              <a href="#">
                 <img src="./images/main/projects/project1.png" alt="flat" />
-              </a>
-            </div>
-          </div>
-          <div class="projects__card-top">
-            <div class="projects__card-contentTop card__contentTop">
-              <div class="card__contentTop-info">
-                <p>Lodz</p>
-              </div>
-              <div class="card__contentTop-info">
-                <p>16.10.2018</p>
-              </div>
-              <div class="card__contentTop-info">
-                <p>80 sq.m</p>
-              </div>
-            </div>
-            <div class="projects__card-contentBottom card__contentBottom">
-              <div class="card__contentBottom-text">
-                <p>Eyewear store interior</p>
-              </div>
-              <div class="card__contentBottom-button">
-                <a href="#">Discover more</a>
-              </div>
-            </div>
-            <div class="projects__card-img">
-              <a href="./oneProject.html">
-                <img src="./images/main/company/topSecond.png" alt="flat" />
               </a>
             </div>
           </div>
@@ -461,7 +315,7 @@
               </div>
             </div>
             <div class="projects__card-img">
-              <a href="./oneProject.html">
+              <a href="#">
                 <img src="./images/main/projects/project2.png" alt="flat" />
               </a>
             </div>
@@ -470,7 +324,33 @@
       </div>
       <div class="ourProjects__inner-item mix commerce">
         <div class="projects__card-wrapper">
-          <div class="projects__card-center">
+          <div class="projects__card">
+            <div class="projects__card-contentTop card__contentTop">
+              <div class="card__contentTop-info">
+                <p>Lodz</p>
+              </div>
+              <div class="card__contentTop-info">
+                <p>16.10.2018</p>
+              </div>
+              <div class="card__contentTop-info">
+                <p>80 sq.m</p>
+              </div>
+            </div>
+            <div class="projects__card-contentBottom card__contentBottom">
+              <div class="card__contentBottom-text">
+                <p>Eyewear store interior</p>
+              </div>
+              <div class="card__contentBottom-button">
+                <a href="#">Discover more</a>
+              </div>
+            </div>
+            <div class="projects__card-img">
+              <a href="#">
+                <img src="./images/main/projects/project1.png" alt="flat" />
+              </a>
+            </div>
+          </div>
+          <div class="projects__card-center projects__card-one">
             <div class="projects__card-contentTop card__contentTop">
               <div class="card__contentTop-info">
                 <p>Lodz</p>
@@ -580,7 +460,7 @@
           </div>
         </div>
         <div class="projects__card-wrapper">
-          <div class="projects__card-center">
+          <div class="projects__card-center projects__card-top">
             <div class="projects__card-contentTop card__contentTop">
               <div class="card__contentTop-info">
                 <p>Lodz</p>
@@ -609,23 +489,26 @@
         </div>
       </div>
     </div>
+    </div>
+    <div class="ourProjects-footer__container">
     <div class="ourProjects__flatCard-wrapper">
       @@include('../../components/flatCard.html', {})
     </div>
-    <footer class="footer footer__black">
-      <div class="footer__wrapper lorem__footer-wrapper">
-        <div class="footer__wrapper-left">
-          <p class="footer__wrapper-copyright">
-            © Copyright 2018. All rights reserved
-          </p>
-        </div>
-        <div class="footer__wrapper-right footer__wrapper-black">
-          <p class="footer__wrapper-text">Made with love in</p>
-          <div class="footer__wrapper-logo">
-            <img src="./images/bottom-logo-black.png" alt="logo" />
+      <footer class="footer footer__black">
+        <div class="footer__wrapper lorem__footer-wrapper">
+          <div class="footer__wrapper-left">
+            <p class="footer__wrapper-copyright">
+              © Copyright 2018. All rights reserved
+            </p>
+          </div>
+          <div class="footer__wrapper-right footer__wrapper-black">
+            <p class="footer__wrapper-text">Made with love in</p>
+            <div class="footer__wrapper-logo">
+              <img src="./images/bottom-logo-black.png" alt="logo" />
+            </div>
           </div>
         </div>
-      </div>
-    </footer>
+      </footer>
+    </div>
   </div>
 </section>
