--- a/src/html/main/projects.html
+++ b/src/html/main/projects.html
@@ -19,11 +19,9 @@
       </div>
     </div>
     <div class="projects__inner">
-        <div class="projects__inner-sidebar">
-            <p>
-                Make request
-            </p>
-        </div>
+      <div class="projects__inner-sidebar">
+        <p>Make request</p>
+      </div>
       <div class="projects__card-wrapper">
         <div class="projects__card">
           <div class="projects__card-contentTop card__contentTop">
@@ -51,7 +49,7 @@
             </a>
           </div>
         </div>
-        <div class="projects__card-top">
+        <div class="projects__card projects__card-top">
           <div class="projects__card-contentTop card__contentTop">
             <div class="card__contentTop-info">
               <p>Lodz</p>
@@ -103,9 +101,7 @@
             </a>
           </div>
         </div>
-      </div>
-      <div class="projects__card-wrapper">
-        <div class="projects__card-center">
+        <div class="projects__card projects__card-desktop projects__card-one">
           <div class="projects__card-contentTop card__contentTop">
             <div class="card__contentTop-info">
               <p>Lodz</p>
@@ -131,9 +127,7 @@
             </a>
           </div>
         </div>
-      </div>
-      <div class="projects__card-wrapper">
-        <div class="projects__card-bottomLeft">
+        <div class="projects__card">
           <div class="projects__card-contentTop card__contentTop">
             <div class="card__contentTop-info">
               <p>Lodz</p>
@@ -159,7 +153,7 @@
             </a>
           </div>
         </div>
-        <div class="projects__card-bottomSecond">
+        <div class="projects__card projects__card-bottomSecond">
           <div class="projects__card-contentTop card__contentTop">
             <div class="card__contentTop-info">
               <p>Lodz</p>
@@ -185,14 +179,18 @@
             </a>
           </div>
         </div>
-        <div class="projects__card-bottomRight">
+        <div class="projects__card projects__card-bottomRight">
           <div class="projects__card-text">
             <p>See more 60 projects</p>
           </div>
           <div class="projects__card-inner">
             <div class="projects__card-bottomImg">
               <a href="#">
-                <img src="./images/main/projects/project5.png" class="projects__small-img" alt="flat" />
+                <img
+                  src="./images/main/projects/project5.png"
+                  class="projects__small-img"
+                  alt="flat"
+                />
               </a>
             </div>
           </div>
