--- a/src/html/projects/ourProjects.html
+++ b/src/html/projects/ourProjects.html
@@ -103,7 +103,7 @@
               </div>
             </div>
             <div class="projects__card-img">
-              <a href="#">
+              <a href="./oneProject.html">
                 <img src="./images/main/projects/project1.png" alt="flat" />
               </a>
             </div>
@@ -129,7 +129,7 @@
               </div>
             </div>
             <div class="projects__card-img">
-              <a href="#">
+              <a href="./oneProject.html">
                 <img src="./images/main/company/topSecond.png" alt="flat" />
               </a>
             </div>
@@ -155,7 +155,7 @@
               </div>
             </div>
             <div class="projects__card-img">
-              <a href="#">
+              <a href="./oneProject.html">
                 <img src="./images/main/projects/project2.png" alt="flat" />
               </a>
             </div>
@@ -181,7 +181,7 @@
               </div>
             </div>
             <div class="projects__card-img">
-              <a href="#">
+              <a href="./oneProject.html">
                 <img src="./images/main/projects/project3.png" alt="flat" />
               </a>
             </div>
@@ -207,7 +207,7 @@
               </div>
             </div>
             <div class="projects__card-img">
-              <a href="#">
+              <a href="./oneProject.html">
                 <img src="./images/main/projects/project4.png" alt="flat" />
               </a>
             </div>
@@ -233,7 +233,7 @@
               </div>
             </div>
             <div class="projects__card-img">
-              <a href="#">
+              <a href="./oneProject.html">
                 <img src="./images/main/company/bottomSecond.png" alt="flat" />
               </a>
             </div>
@@ -259,7 +259,7 @@
               </div>
             </div>
             <div class="projects__card-img">
-              <a href="#">
+              <a href="./oneProject.html">
                 <img src="./images/projects/ourProjects/flat6.png" alt="flat" />
               </a>
             </div>
@@ -289,7 +289,7 @@
               </div>
             </div>
             <div class="projects__card-img">
-              <a href="#">
+              <a href="./oneProject.html">
                 <img src="./images/main/projects/project1.png" alt="flat" />
               </a>
             </div>
@@ -315,7 +315,7 @@
               </div>
             </div>
             <div class="projects__card-img">
-              <a href="#">
+              <a href="./oneProject.html">
                 <img src="./images/main/projects/project2.png" alt="flat" />
               </a>
             </div>
@@ -345,7 +345,7 @@
               </div>
             </div>
             <div class="projects__card-img">
-              <a href="#">
+              <a href="./oneProject.html">
                 <img src="./images/main/projects/project1.png" alt="flat" />
               </a>
             </div>
