--- a/src/html/header.html
+++ b/src/html/header.html
@@ -48,7 +48,7 @@
               </div>
               <div class="header__button-wrapper">
                 <a href="#">
-                  <div class="header__button button">Send Request</div>
+                  <div class="header__button popUp__btn button">Send Request</div>
                 </a>
               </div>
             </div>
@@ -72,7 +72,7 @@
           </li>
           <div class="menu__button-wrapper">
             <a href="#">
-              <div class="button">Send Request</div>
+              <div class="button popUp__btn">Send Request</div>
             </a>
           </div>
         </ul>
@@ -167,7 +167,7 @@
       </div>
       <div class="header__button-wrapper">
         <a href="#">
-          <div class="header__button button">Send Request</div>
+          <div class="header__button popUp__btn button">Send Request</div>
         </a>
       </div>
     </div>
