--- a/src/oneNews.html
+++ b/src/oneNews.html
@@ -4,6 +4,7 @@
     'title': 'oneNews'
   })
   <body class="body-black">
+    @@include('html/popUp/popUp.html', {})
     <div class="wrapper">
       @@include('html/headerBlack.html', {})
       <main class="page">
