--- a/src/pageContact.html
+++ b/src/pageContact.html
@@ -4,6 +4,7 @@
     'title': 'pageContact'
   })
   <body>
+    @@include('html/popUp/popUp.html', {})
     <div class="wrapper">
       @@include('html/header.html', {})
       <main class="page">
