to fixed bug with cards

--- a/src/html/projects/ourProjects.html
+++ b/src/html/projects/ourProjects.html
@@ -324,7 +324,7 @@
       </div>
       <div class="ourProjects__inner-item mix commerce">
         <div class="projects__card-wrapper">
-          <div class="projects__card">
+          <div class="projects__card ourProjects__card-commerce-mobile">
             <div class="projects__card-contentTop card__contentTop">
               <div class="card__contentTop-info">
                 <p>Lodz</p>
