--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,7 @@
   })
   <body>
     @@include('html/popUp/popUp.html', {})
+    @@include('html/popUpValid/popUpValid.html', {})
     <div class="wrapper">
       @@include('html/header.html', {})
       <main class="page">
