to fixed bug with form and fixed bug with popup

--- a/src/html/popUp/popUp.html
+++ b/src/html/popUp/popUp.html
@@ -127,7 +127,7 @@
               name="comment"
               placeholder="Your comment"
             />
-            <p id="validate-email-text" class="popUp__comment-text"></p>
+            <p id="validate-comment-text" class="popUp__validate-text"></p>
           </div>
         </div>
         <div class="popUp-content__bottom">
