--- a/src/about.html
+++ b/src/about.html
@@ -4,6 +4,7 @@
     'title': 'about'
   })
   <body class="body-black">
+    @@include('html/preloader/preloader.html', {})
     @@include('html/popUp/popUp.html', {})
     <div class="wrapper">
       @@include('html/headerBlack.html', {})
