--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,7 @@
     'title': 'main'
   })
   <body>
+    @@include('html/preloader/preloader.html', {})
     @@include('html/popUp/popUp.html', {})
     @@include('html/popUpValid/popUpValid.html', {})
     <div class="wrapper">
