--- a/src/projects.html
+++ b/src/projects.html
@@ -4,6 +4,7 @@
     'title': 'projects'
   })
   <body class="body-black">
+    @@include('html/preloader/preloader.html', {})
     @@include('html/popUp/popUp.html', {})
     <div class="wrapper">
       @@include('html/headerBlack.html', {})
