to fixed bug with button and add popup on all pages

--- a/src/about.html
+++ b/src/about.html
@@ -6,6 +6,7 @@
   <body class="body-black">
     @@include('html/preloader/preloader.html', {})
     @@include('html/popUp/popUp.html', {})
+    @@include('html/popUpValid/popUpValid.html', {})
     <div class="wrapper">
       @@include('html/headerBlack.html', {})
       <main class="page">
