--- a/src/html/headerBlack.html
+++ b/src/html/headerBlack.html
@@ -167,7 +167,7 @@
         </div>
         <div class="header__button-wrapper black-header__button-wrapper">
           <a href="#">
-            <div class="popUp__btn button-black">Send Request</div>
+            <div class="popUp__btn button-black black-header__button">Send Request</div>
           </a>
         </div>
       </div>
