--- a/src/pageContact.html
+++ b/src/pageContact.html
@@ -6,6 +6,7 @@
   <body>
     @@include('html/preloader/preloader.html', {})
     @@include('html/popUp/popUp.html', {})
+    @@include('html/popUpValid/popUpValid.html', {})
     <div class="wrapper">
       @@include('html/header.html', {})
       <main class="page">
